--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,14 @@ Type: Package
 Title: Coarse Approximation Linear Function
 Version: 1.0.15
 Date: 2020-05-5
-Author: John Ford [aut], Stephanie Lane [aut, cre], Clark Jeffries [aut], Diana Perkins [aut]
+Author: Stephanie Lane [aut, cre], John Ford [aut], Clark Jeffries [aut], Diana Perkins [aut]
 Maintainer: John Ford <JoRuFo@gmail.com>
 Description: Contains greedy algorithms for coarse approximation linear functions.
 License: GPL-2
 Imports: data.table, ggplot2
 LazyData: TRUE
 RoxygenNote: 7.1.0
+Encoding: UTF-8
 NeedsCompilation: no
 Packaged: 2020-05-05 08:15:35 UTC; John Ford
 Repository: CRAN
